--- a/templates/index.html
+++ b/templates/index.html
@@ -346,10 +346,10 @@ The United States has the most expensive healthcare system of any country, where
 	<br>
 	<br>
     <label for="State">State code</label>
-    <input name="State" size="30" placeholder="1 to 50" required><br>
+    <input name="State" size="30" placeholder="1 to 54" required><br>
 	<br>
     <label for="County">County code</label>
-    <input name="County" size="30" placeholder="XXX - 2 or 3 digits" required><br>
+    <input name="County" size="30" placeholder="0 to 999" required><br>
 	<br>
     <label for="ClaimStartDt">Claim Start date</label>
     <input type="date" id="ClaimStartDt" name="ClaimStartDt" value="2009-01-01" required>
